force-app/main/default/objects/Examination__c/Examination__c.object-meta.xml
<CustomObject>
    <label>Examination</label>
    <nameField>
        <label>Examiner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Examination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>