force-app/main/default/objects/Examination__c/fields/Examination_centre__c.field-meta.xml
<CustomField>
    <fullName>Examination_centre__c</fullName>
    <label>Examination centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>