force-app/main/default/objects/Examination__c/fields/Examination_code__c.field-meta.xml
<CustomField>
    <fullName>Examination_code__c</fullName>
    <label>Examination code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>